// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeekBar when rendering a SeekBar should render as expected 1`] = `
<div>
  <input
    class="mx_SeekBar"
    max="1"
    min="0"
    step="0.001"
    style="--fillTo: 0.0999840840362884;"
    tabindex="0"
    type="range"
    value="0.0999840840362884"
  />
</div>
`;

exports[`SeekBar when rendering a disabled SeekBar should render as expected 1`] = `
<div>
  <input
    class="mx_SeekBar"
    disabled=""
    max="1"
    min="0"
    step="0.001"
    style="--fillTo: 0;"
    tabindex="0"
    type="range"
    value="0"
  />
</div>
`;
